{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "210000d4-837d-44ee-b41d-d96b6520af75",
            "actions": [
                {
                    "name": "Open Inventory",
                    "type": "Button",
                    "id": "ebcbae47-97de-4595-878c-c5bb99b36a63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "3e775014-0083-4939-9016-7466496b97db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spawn Item",
                    "type": "Button",
                    "id": "e512cc7c-8256-42c8-be2e-479a8287de24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Remove Item",
                    "type": "Button",
                    "id": "0ccff91f-2be0-492b-8ddd-d6af88345feb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GetHalfStackOfItems",
                    "type": "Button",
                    "id": "03e6976c-0f33-4c7c-9384-df69b556c426",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GetItemsWithScroll",
                    "type": "Button",
                    "id": "6a1be7a3-480f-4cff-9a01-a4fff97ec6ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveForwardAndBackward",
                    "type": "Button",
                    "id": "14752315-b4ed-4bcd-bb31-db0b194feb58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRightAndLeft",
                    "type": "Button",
                    "id": "1661d645-3cd9-43ef-8666-62fe900002c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "b8f0d307-647b-4677-8c39-a1a1b114b82e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ItemSpawner",
                    "type": "Button",
                    "id": "950e89b2-66c0-43be-bc31-34563d637bb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "46ea277d-4267-4d7e-9e5b-fa59a182f09c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open Context Menu",
                    "type": "Button",
                    "id": "4612244c-bb5d-4f3e-9e7a-946a5c9f5f09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "3c70648e-8a1f-432d-a070-fd2feb2c1aff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "592e24b8-3cb4-4fab-bb7b-b02c9b6ea2b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DisableScrollingInView",
                    "type": "Button",
                    "id": "251e61c9-65da-4997-8da0-d732ebaa99cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7d337dd8-f13c-4fbe-b5cf-ea731305ebc0",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7af28de4-359e-415f-a425-80b1755bab34",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "289739e2-64f0-438c-bd2a-e28d40e8decc",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn Item",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d16bda78-a838-442c-b31f-d67db0f2c2da",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Remove Item",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b37889e1-b7bd-4bec-a920-6052aa42e3e4",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetHalfStackOfItems",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "2a145caa-a1a5-4a63-b077-07c0db3dd538",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetItemsWithScroll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "bc6846a4-c17a-4b55-b086-07f10901871b",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetItemsWithScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "65796d29-0759-4f5d-9b0b-3a011fa00067",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "GetItemsWithScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "40948ba5-ebbb-41ef-a8f1-89398cd934e1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardAndBackward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "eda4e13c-794f-4869-80d3-b7828e130722",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardAndBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "45af557f-9888-4b42-b7b5-d46a050b1103",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForwardAndBackward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "85e644ef-0d11-45c1-a405-f850e5073f9d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightAndLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "f8965f15-f351-4908-92bd-731310f8ea57",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightAndLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "829f913c-18b7-4328-ab0b-d66c9295f85d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightAndLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "21c946e9-7a6e-4da9-9971-553767afeac7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c242fd2a-81ef-47b8-97d1-1d9d3e8c7495",
                    "path": "<Keyboard>/backquote",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ItemSpawner",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c41ac916-4200-4ca3-8831-36a2af9c732c",
                    "path": "<Keyboard>/f",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "299b149c-89ae-4a12-a607-9355d7a3d580",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Open Context Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff3b65b7-9b9c-4a4d-b1b2-eb9dae237604",
                    "path": "<Keyboard>/escape",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53c19661-4daa-4a52-8936-7b561237df37",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da726b4d-242e-441f-beb3-3201b2934db3",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "DisableScrollingInView",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}